--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="top-header">
       <div class="container">
         <nav class="nav">
+          <div class="social">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-behance"></i></a>
+          </div>
+          <!-- /.social -->
           <div class="nav-wrap">
             <div class="logo">
               <h1><a href="index.html">thomsoon</a></h1>
@@ -28,6 +33,9 @@
               <!-- /.burger -->
               <div class="main-menu">
                 <ul>
+                  <li class="show-home">
+                    <a href="#">home</a>
+                  </li>
                   <li>
                     <a href="#">projects</a>
                     <ul>
@@ -55,11 +63,6 @@
             <!-- /.menu -->
           </div>
           <!-- /.nav-wrap -->
-          <div class="social">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
-          </div>
-          <!-- /.social -->
         </nav>
         <!-- /.nav -->
       </div>
@@ -98,28 +101,94 @@
           <p>Please check my portfolio. All project is clean and simplicity modern style. You can buy this template</p>
         </div>
         <!-- /.main-title -->
+        <div class="main-blocks">
+          <div class="block-content left">
+            <div class="block block1">
+              <div class="overlay"></div>
+              <!-- /.overlay -->
+              <div class="content">
+                <h5>single</h5>
+                <p>Branding</p>
+              </div>
+              <!-- /.content -->
+              <a href="javascript:;"></a>
+            </div>
+            <!-- /.block -->
+            <div class="block block3">
+              <div class="overlay"></div>
+              <!-- /.overlay -->
+              <div class="content">
+                <h5>single</h5>
+                <p>Branding</p>
+              </div>
+              <!-- /.content -->
+              <a href="javascript:;"></a>
+            </div>
+            <!-- /.block -->
+            <div class="block block5">
+              <div class="overlay"></div>
+              <!-- /.overlay -->
+              <div class="content">
+                <h5>single</h5>
+                <p>Branding</p>
+              </div>
+              <!-- /.content -->
+              <a href="javascript:;"></a>
+            </div>
+            <!-- /.block -->
+          </div>
+          <!-- /.block-content -->
+          <div class="block-content right">
+            <div class="block block2">
+              <div class="overlay"></div>
+              <!-- /.overlay -->
+              <div class="content">
+                <h5>single</h5>
+                <p>Branding</p>
+              </div>
+              <!-- /.content -->
+              <a href="javascript:;"></a>
+            </div>
+            <!-- /.block -->
+            <div class="block block4">
+              <div class="overlay"></div>
+              <!-- /.overlay -->
+              <div class="content">
+                <h5>single</h5>
+                <p>Branding</p>
+              </div>
+              <!-- /.content -->
+              <a href="javascript:;"></a>
+            </div>
+            <!-- /.block -->
+            <div class="block block6">
+              <div class="overlay"></div>
+              <!-- /.overlay -->
+              <div class="content">
+                <h5>single</h5>
+                <p>Branding</p>
+              </div>
+              <!-- /.content -->
+              <a href="javascript:;"></a>
+            </div>
+            <!-- /.block -->
+          </div>
+          <!-- /.block-content -->
+        </div>
+        <!-- /.main-blocks -->
       </div>
       <!-- /.container -->
     </section>
     <!-- /.main-content -->
   </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <footer class="footer">
+    <div class="container">
+      <p>© Copyright 2015 Thomsoon.com. All Rights Reserved</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 
 
