--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+  <div class="preloader">
+    <div class="preloader-item"></div>
+    <!-- /.preloader-item -->
+  </div>
+  <!-- /.preloader -->
   <header class="header">
     <div class="top-header">
       <div class="container">
